# gpu-fan-controller

./: .gitignore  Cargo.toml
src/: main.rs
